force-app/main/default/objects/SalesManagement__c/fields/DocSetUp_Contact_Timezone__c.field-meta.xml
<CustomField>
    <fullName>DocSetUp_Contact_Timezone__c</fullName>
    <description>与儀</description>
    <label>連絡時間帯/営業時間（書類取付）</label>
    <length>50</length>
    <type>Text</type>
</CustomField>