force-app/main/default/objects/SalesManagement__c/fields/Document_history_content__c.field-meta.xml
<CustomField>
    <fullName>Document_history_content__c</fullName>
    <label>書類経緯内容</label>
    <type>TextArea</type>
</CustomField>