force-app/main/default/objects/SalesManagement__c/fields/Document_set_up__c.field-meta.xml
<CustomField>
    <fullName>Document_set_up__c</fullName>
    <description>与儀</description>
    <label>書類取付担当</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>営業</fullName>
            </value>
            <value>
                <fullName>管理課</fullName>
            </value>
            <value>
                <fullName>営業/管理課からの連絡不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>