force-app/main/default/objects/SalesManagement__c/fields/Document_set_up_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_set_up_Category__c</fullName>
    <description>与儀</description>
    <label>書類取付先</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>取引先と同じ</fullName>
            </value>
            <value>
                <fullName>保管先と同じ</fullName>
            </value>
            <value>
                <fullName>車検証 所有者と同じ</fullName>
            </value>
            <value>
                <fullName>車検証 使用者と同じ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>SF登録済み業者から探す</fullName>
                <isActive>false</isActive>
                <label>SF登録済み業者から探す</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>