force-app/main/default/objects/SalesManagement__c/fields/Document_set_up_person__c.field-meta.xml
<CustomField>
    <fullName>Document_set_up_person__c</fullName>
    <description>与儀</description>
    <label>書類取付先お名前</label>
    <length>50</length>
    <type>Text</type>
</CustomField>