force-app/main/default/objects/SalesManagement__c/fields/Document_set_up_phone__c.field-meta.xml
<CustomField>
    <fullName>Document_set_up_phone__c</fullName>
    <description>与儀</description>
    <label>書類取付先電話番号</label>
    <type>Phone</type>
</CustomField>