force-app/main/default/objects/SalesManagement__c/fields/Document_set_up_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Document_set_up_Remarks__c</fullName>
    <description>与儀</description>
    <label>書類窓口備考</label>
    <type>TextArea</type>
</CustomField>