force-app/main/default/objects/SalesManagement__c/fields/Document_status__c.field-meta.xml
<CustomField>
    <fullName>Document_status__c</fullName>
    <label>書類ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未取付</fullName>
                <default>true</default>
                <label>未取付</label>
            </value>
            <value>
                <fullName>取付中</fullName>
            </value>
            <value>
                <fullName>取付済</fullName>
            </value>
            <value>
                <fullName>郵送中</fullName>
            </value>
            <value>
                <fullName>書類OK</fullName>
            </value>
            <value>
                <fullName>その他書類待ち</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>保留</fullName>
            </value>
            <value>
                <fullName>案件キャンセル</fullName>
            </value>
            <value>
                <fullName>入力待ち</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>