force-app/main/default/objects/SalesManagement__c/fields/DocumentOKCheck__c.field-meta.xml
<CustomField>
    <fullName>DocumentOKCheck__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.DocumentOKCheck__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>書類OK日（到着日）</label>
    <type>Date</type>
</CustomField>