force-app/main/default/objects/SalesManagement__c/fields/duplicate_flag__c.field-meta.xml
<CustomField>
    <fullName>duplicate_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>同一取引先に他の進行中営業管理が存在する場合にTrueとする。</description>
    <label>重複フラグ</label>
    <type>Checkbox</type>
</CustomField>