force-app/main/default/objects/SalesManagement__c/fields/DuplicateCount__c.field-meta.xml
<CustomField>
    <fullName>DuplicateCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>重複件数</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>