force-app/main/default/objects/SalesManagement__c/fields/DuplicateMessage__c.field-meta.xml
<CustomField>
    <fullName>DuplicateMessage__c</fullName>
    <formula>
        IF(
            DuplicateCount__c &gt; 0,
            "同じ取引先で進行中の営業管理が他に"
            &amp; TEXT(DuplicateCount__c)
            &amp; "件あります。",
            ""
        )
    </formula>
    <label>重複メッセージ</label>
    <type>Text</type>
</CustomField>