force-app/main/default/objects/SalesManagement__c/fields/e_invoice_url__c.field-meta.xml
<CustomField>
    <fullName>e_invoice_url__c</fullName>
    <label>電子請求書URL</label>
    <type>Url</type>
</CustomField>