force-app/main/default/objects/SalesManagement__c/fields/Electronic_contract_URL__c.field-meta.xml
<CustomField>
    <fullName>Electronic_contract_URL__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.Electronic_contract_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>電子売契URL</label>
    <type>Text</type>
</CustomField>