force-app/main/default/objects/SalesManagement__c/fields/ElectronicContractURL__c.field-meta.xml
<CustomField>
    <fullName>ElectronicContractURL__c</fullName>
    <label>電子契約URL</label>
    <type>Url</type>
</CustomField>