force-app/main/default/objects/SalesManagement__c/fields/estimated_payment_amount__c.field-meta.xml
<CustomField>
    <fullName>estimated_payment_amount__c</fullName>
    <description>営業管理が納付書を見て入力する。山本</description>
    <label>自動車税納付予定金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>