force-app/main/default/objects/SalesManagement__c/fields/First_year_registration__c.field-meta.xml
<CustomField>
    <fullName>First_year_registration__c</fullName>
    <formula>TEXT( PurchaseOpportunity__r.First_year_registration__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>初年度登録月</label>
    <type>Text</type>
</CustomField>