force-app/main/default/objects/SalesManagement__c/fields/form_num__c.field-meta.xml
<CustomField>
    <fullName>form_num__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.form_num__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>型式指定番号</label>
    <type>Text</type>
</CustomField>