force-app/main/default/objects/SalesManagement__c/fields/ForwardingCompany__c.field-meta.xml
<CustomField>
    <fullName>ForwardingCompany__c</fullName>
    <description>与儀</description>
    <label>回送業者</label>
    <type>TextArea</type>
</CustomField>