force-app/main/default/objects/SalesManagement__c/fields/ForwardingRequestDate__c.field-meta.xml
<CustomField>
    <fullName>ForwardingRequestDate__c</fullName>
    <description>与儀</description>
    <label>回送依頼日</label>
    <type>Date</type>
</CustomField>