force-app/main/default/objects/SalesManagement__c/fields/ForwardingScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ForwardingScheduledDate__c</fullName>
    <description>与儀</description>
    <label>搬出日</label>
    <type>Date</type>
</CustomField>