force-app/main/default/objects/SalesManagement__c/fields/FreeEntryField__c.field-meta.xml
<CustomField>
    <fullName>FreeEntryField__c</fullName>
    <description>売契情報</description>
    <label>その他事項</label>
    <type>TextArea</type>
</CustomField>