force-app/main/default/objects/SalesManagement__c/fields/GroundClearance__c.field-meta.xml
<CustomField>
    <fullName>GroundClearance__c</fullName>
    <description>山本</description>
    <formula>TEXT(  PurchaseOpportunity__r.GroundClearance__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最低地上高</label>
    <type>Text</type>
</CustomField>