force-app/main/default/objects/SalesManagement__c/fields/handover_date_flg__c.field-meta.xml
<CustomField>
    <fullName>handover_date_flg__c</fullName>
    <description>売契引継ぎフロー開始日7/14以降かを判別するフラグ
運用が広がり次第不要になるため要削除</description>
    <formula>DATEVALUE(CreatedDate  ) &gt;=  DATE(2025,7,14)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>削除予定_引継日フラグ</label>
    <type>Checkbox</type>
</CustomField>