force-app/main/default/objects/SalesManagement__c/fields/History_Input_DateTime__c.field-meta.xml
<CustomField>
    <fullName>History_Input_DateTime__c</fullName>
    <label>経緯入力日時</label>
    <type>DateTime</type>
</CustomField>