force-app/main/default/objects/SalesManagement__c/fields/History_Input_Time__c.field-meta.xml
<CustomField>
    <fullName>History_Input_Time__c</fullName>
    <formula>TEXT( HOUR( TIMEVALUE( History_Input_DateTime__c ) ) + 9 ) &amp; &quot;:&quot; &amp; IF( MINUTE( TIMEVALUE( History_Input_DateTime__c ) ) &lt; 10 , &quot;0&quot; &amp; TEXT( MINUTE( TIMEVALUE( History_Input_DateTime__c ) ) ) , TEXT( MINUTE( TIMEVALUE( History_Input_DateTime__c ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>経緯入力時間</label>
    <type>Text</type>
</CustomField>