force-app/main/default/objects/SalesManagement__c/fields/in_progress__c.field-meta.xml
<CustomField>
    <fullName>in_progress__c</fullName>
    <formula>NOT(
            AND(
                OR(
                    ISPICKVAL(Pickup_status__c, &quot;完了&quot;),
                    ISPICKVAL(Pickup_status__c, &quot;案件キャンセル&quot;)
                ),
                OR(
                    ISPICKVAL(Document_status__c, &quot;完了&quot;),
                    ISPICKVAL(Document_status__c, &quot;案件キャンセル&quot;)
                ),
                OR(
                    ISPICKVAL(Transfer_status__c, &quot;振込完了&quot;),
                    ISPICKVAL(Transfer_status__c, &quot;案件キャンセル&quot;)
                )
            )
        )</formula>
    <label>進行中</label>
    <type>Checkbox</type>
</CustomField>