force-app/main/default/objects/SalesManagement__c/fields/InProgress__c.field-meta.xml
<CustomField>
    <fullName>InProgress__c</fullName>
    <formula>
        NOT(
            AND(
                OR(
                    ISPICKVAL(Pickup_status__c, "完了"),
                    ISPICKVAL(Pickup_status__c, "案件キャンセル")
                ),
                OR(
                    ISPICKVAL(Document_status__c, "完了"),
                    ISPICKVAL(Document_status__c, "案件キャンセル")
                ),
                OR(
                    ISPICKVAL(Transfer_status__c, "振込完了"),
                    ISPICKVAL(Transfer_status__c, "案件キャンセル")
                )
            )
        )
    </formula>
    <label>進行中</label>
    <type>Checkbox</type>
</CustomField>