force-app/main/default/objects/SalesManagement__c/fields/InstructionLimitDate__c.field-meta.xml
<CustomField>
    <fullName>InstructionLimitDate__c</fullName>
    <formula>PurchaseOpportunity__r.InstructionLimitDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>指示書リミット日時</label>
    <type>DateTime</type>
</CustomField>