force-app/main/default/objects/SalesManagement__c/fields/invoice_amount__c.field-meta.xml
<CustomField>
    <fullName>invoice_amount__c</fullName>
    <formula>PurchaseOpportunity__r.invoice_amount__c</formula>
    <label>請求書金額(税込)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>