force-app/main/default/objects/SalesManagement__c/fields/invoice_confirmation_date__c.field-meta.xml
<CustomField>
    <fullName>invoice_confirmation_date__c</fullName>
    <label>請求書確認日</label>
    <type>Date</type>
</CustomField>