force-app/main/default/objects/SalesManagement__c/fields/invoice_delivery_method__c.field-meta.xml
<CustomField>
    <fullName>invoice_delivery_method__c</fullName>
    <label>請求書送付方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>郵送</fullName>
            </value>
            <value>
                <fullName>FAX</fullName>
            </value>
            <value>
                <fullName>GMOサイン(メール)</fullName>
            </value>
            <value>
                <fullName>GMOサイン(SMS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>