force-app/main/default/objects/SalesManagement__c/fields/invoice_destination__c.field-meta.xml
<CustomField>
    <fullName>invoice_destination__c</fullName>
    <label>請求書送付先</label>
    <length>50</length>
    <type>Text</type>
</CustomField>