force-app/main/default/objects/SalesManagement__c/fields/invoice_destination_address__c.field-meta.xml
<CustomField>
    <fullName>invoice_destination_address__c</fullName>
    <formula>invoice_destination_postal_code__c &amp; BR() &amp;
invoice_destination_prefecture__c &amp; &quot; &quot; &amp;
invoice_destination_city__c &amp; BR() &amp;
invoice_destination_town__c</formula>
    <label>請求書送付先住所</label>
    <type>Text</type>
</CustomField>