force-app/main/default/objects/SalesManagement__c/fields/invoice_destination_city__c.field-meta.xml
<CustomField>
    <fullName>invoice_destination_city__c</fullName>
    <label>請求書送付先_市区郡</label>
    <length>50</length>
    <type>Text</type>
</CustomField>