force-app/main/default/objects/SalesManagement__c/fields/invoice_destination_email__c.field-meta.xml
<CustomField>
    <fullName>invoice_destination_email__c</fullName>
    <label>請求書送付先_メールアドレス</label>
    <type>Email</type>
</CustomField>