force-app/main/default/objects/SalesManagement__c/fields/invoice_destination_postal_code__c.field-meta.xml
<CustomField>
    <fullName>invoice_destination_postal_code__c</fullName>
    <label>請求書送付先_郵便番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>