force-app/main/default/objects/SalesManagement__c/fields/invoice_destination_prefecture__c.field-meta.xml
<CustomField>
    <fullName>invoice_destination_prefecture__c</fullName>
    <label>請求書送付先_都道府県</label>
    <length>10</length>
    <type>Text</type>
</CustomField>