force-app/main/default/objects/SalesManagement__c/fields/invoice_destination_town__c.field-meta.xml
<CustomField>
    <fullName>invoice_destination_town__c</fullName>
    <label>請求書送付先_町名・番地</label>
    <length>100</length>
    <type>Text</type>
</CustomField>