force-app/main/default/objects/SalesManagement__c/fields/invoice_fax__c.field-meta.xml
<CustomField>
    <fullName>invoice_fax__c</fullName>
    <label>請求書送付先_FAX</label>
    <type>Phone</type>
</CustomField>