force-app/main/default/objects/SalesManagement__c/fields/invoice_payment_deadline__c.field-meta.xml
<CustomField>
    <fullName>invoice_payment_deadline__c</fullName>
    <description>請求書出力で使用。API参照名を変更する時はDataspider側の修正が必要。山本</description>
    <label>請求書_支払期限</label>
    <type>Date</type>
</CustomField>