force-app/main/default/objects/SalesManagement__c/fields/invoice_setup__c.field-meta.xml
<CustomField>
    <fullName>invoice_setup__c</fullName>
    <label>請求書取付担当</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>営業取付</fullName>
            </value>
            <value>
                <fullName>管理取付</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>