force-app/main/default/objects/SalesManagement__c/fields/invoice_setup_date__c.field-meta.xml
<CustomField>
    <fullName>invoice_setup_date__c</fullName>
    <label>請求書取付日</label>
    <type>Date</type>
</CustomField>