force-app/main/default/objects/SalesManagement__c/fields/invoice_sms__c.field-meta.xml
<CustomField>
    <fullName>invoice_sms__c</fullName>
    <label>請求書送付先_SMS</label>
    <type>Phone</type>
</CustomField>