force-app/main/default/objects/SalesManagement__c/fields/landing__c.field-meta.xml
<CustomField>
    <fullName>landing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>与儀</description>
    <label>搬入先</label>
    <referenceTo>Mst_Yard__c</referenceTo>
    <relationshipLabel>営業管理</relationshipLabel>
    <relationshipName>landing</relationshipName>
    <type>Lookup</type>
</CustomField>