force-app/main/default/objects/SalesManagement__c/fields/Last_Document_set_up_history__c.field-meta.xml
<CustomField>
    <fullName>Last_Document_set_up_history__c</fullName>
    <label>書類最終経緯</label>
    <type>TextArea</type>
</CustomField>