force-app/main/default/objects/SalesManagement__c/fields/Last_Pickup_history__c.field-meta.xml
<CustomField>
    <fullName>Last_Pickup_history__c</fullName>
    <label>引取最終経緯</label>
    <type>TextArea</type>
</CustomField>