force-app/main/default/objects/SalesManagement__c/fields/LeagalCheckDate__c.field-meta.xml
<CustomField>
    <fullName>LeagalCheckDate__c</fullName>
    <formula>PurchaseOpportunity__r.LeagalCheckDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>法務課チェック日</label>
    <type>Date</type>
</CustomField>