force-app/main/default/objects/SalesManagement__c/fields/Ledger_supplierName__c.field-meta.xml
<CustomField>
    <fullName>Ledger_supplierName__c</fullName>
    <label>台帳仕入先名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>