force-app/main/default/objects/SalesManagement__c/fields/LoginSystem__c.field-meta.xml
<CustomField>
    <fullName>LoginSystem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>与儀</description>
    <label>支払依頼入力</label>
    <type>Checkbox</type>
</CustomField>