force-app/main/default/objects/SalesManagement__c/fields/loolup_StorageLocation_person__c.field-meta.xml
<CustomField>
    <fullName>loolup_StorageLocation_person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>保管先担当者_不要</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>営業管理 (保管先担当者)</relationshipLabel>
    <relationshipName>StorageLocation_person</relationshipName>
    <type>Lookup</type>
</CustomField>