force-app/main/default/objects/SalesManagement__c/fields/LotNo_AutoNumbering__c.field-meta.xml
<CustomField>
    <fullName>LotNo_AutoNumbering__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>ロット番号【自動採番】</label>
    <type>AutoNumber</type>
</CustomField>