force-app/main/default/objects/SalesManagement__c/fields/Mailing_address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_address__c</fullName>
    <description>与儀</description>
    <label>発送先住所</label>
    <length>50</length>
    <type>Text</type>
</CustomField>