force-app/main/default/objects/SalesManagement__c/fields/Mailing_person__c.field-meta.xml
<CustomField>
    <fullName>Mailing_person__c</fullName>
    <description>与儀</description>
    <label>発送先お名前</label>
    <length>50</length>
    <type>Text</type>
</CustomField>