force-app/main/default/objects/SalesManagement__c/fields/Mailing_PostCode__c.field-meta.xml
<CustomField>
    <fullName>Mailing_PostCode__c</fullName>
    <description>送付状の出力で使用。山本</description>
    <label>発送先郵便番号</label>
    <length>8</length>
    <type>Text</type>
</CustomField>