force-app/main/default/objects/SalesManagement__c/fields/MailingAddress__c.field-meta.xml
<CustomField>
    <fullName>MailingAddress__c</fullName>
    <description>売契情報</description>
    <label>送付先</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>取引先</fullName>
            </value>
            <value>
                <fullName>取引先担当者</fullName>
            </value>
            <value>
                <fullName>所有者</fullName>
            </value>
            <value>
                <fullName>使用者</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>