force-app/main/default/objects/SalesManagement__c/fields/memo_for_contact__c.field-meta.xml
<CustomField>
    <fullName>memo_for_contact__c</fullName>
    <label>連絡メモ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>