force-app/main/default/objects/SalesManagement__c/fields/meter__c.field-meta.xml
<CustomField>
    <fullName>meter__c</fullName>
    <description>売契情報</description>
    <label>メーター</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>実走</fullName>
            </value>
            <value>
                <fullName>改ざん</fullName>
            </value>
            <value>
                <fullName>交換（記録簿あり）</fullName>
            </value>
            <value>
                <fullName>交換（記録簿なし）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>