force-app/main/default/objects/SalesManagement__c/fields/Model_INUM__c.field-meta.xml
<CustomField>
    <fullName>Model_INUM__c</fullName>
    <formula>PurchaseOpportunity__r.Mst_Models_formula__c  &amp; &quot;(&quot; &amp;  PurchaseOpportunity__r.Mst_Models__r.inum__c &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車種・INUM</label>
    <type>Text</type>
</CustomField>