force-app/main/default/objects/SalesManagement__c/fields/ModelYear_Japanese__c.field-meta.xml
<CustomField>
    <fullName>ModelYear_Japanese__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.ModelYear_Japanese__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>年式（和暦）</label>
    <type>Text</type>
</CustomField>