force-app/main/default/objects/SalesManagement__c/fields/ModelYearCarName__c.field-meta.xml
<CustomField>
    <fullName>ModelYearCarName__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.ModelYearCarName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>年式・車名</label>
    <type>Text</type>
</CustomField>