force-app/main/default/objects/SalesManagement__c/fields/ModelYearPickList__c.field-meta.xml
<CustomField>
    <fullName>ModelYearPickList__c</fullName>
    <formula>TEXT( PurchaseOpportunity__r.ModelYearPickList__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>年式</label>
    <type>Text</type>
</CustomField>