force-app/main/default/objects/SalesManagement__c/fields/Mst_Grades__c.field-meta.xml
<CustomField>
    <fullName>Mst_Grades__c</fullName>
    <formula>PurchaseOpportunity__r.Mst_Grades_formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>グレード</label>
    <type>Text</type>
</CustomField>