force-app/main/default/objects/SalesManagement__c/fields/Mst_Makers__c.field-meta.xml
<CustomField>
    <fullName>Mst_Makers__c</fullName>
    <formula>PurchaseOpportunity__r.Mst_Makers_formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>メーカ</label>
    <type>Text</type>
</CustomField>