force-app/main/default/objects/SalesManagement__c/fields/Mst_Types__c.field-meta.xml
<CustomField>
    <fullName>Mst_Types__c</fullName>
    <formula>PurchaseOpportunity__r.Mst_Types_formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>型式</label>
    <type>Text</type>
</CustomField>