force-app/main/default/objects/SalesManagement__c/fields/nearest_yard__c.field-meta.xml
<CustomField>
    <fullName>nearest_yard__c</fullName>
    <description>与儀</description>
    <label>引取先の最寄りヤード</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>北海道ヤード</fullName>
            </value>
            <value>
                <fullName>岩手ヤード</fullName>
            </value>
            <value>
                <fullName>仙台ヤード</fullName>
            </value>
            <value>
                <fullName>仙台第二ヤード</fullName>
            </value>
            <value>
                <fullName>秋田ヤード</fullName>
            </value>
            <value>
                <fullName>新潟ヤード</fullName>
            </value>
            <value>
                <fullName>新潟第二ヤード</fullName>
            </value>
            <value>
                <fullName>栃木ヤード</fullName>
            </value>
            <value>
                <fullName>水戸ヤード</fullName>
            </value>
            <value>
                <fullName>千葉ヤード</fullName>
            </value>
            <value>
                <fullName>首都圏ヤード</fullName>
            </value>
            <value>
                <fullName>神奈川ヤード</fullName>
            </value>
            <value>
                <fullName>静岡ヤード</fullName>
            </value>
            <value>
                <fullName>長野ヤード</fullName>
            </value>
            <value>
                <fullName>金沢ヤード</fullName>
            </value>
            <value>
                <fullName>群馬ヤード</fullName>
            </value>
            <value>
                <fullName>名古屋ヤード</fullName>
            </value>
            <value>
                <fullName>名古屋第二ヤード</fullName>
            </value>
            <value>
                <fullName>愛知東ヤード</fullName>
            </value>
            <value>
                <fullName>岐阜ヤード</fullName>
            </value>
            <value>
                <fullName>神戸集中ヤード</fullName>
            </value>
            <value>
                <fullName>神戸第二ヤード</fullName>
            </value>
            <value>
                <fullName>京都ヤード</fullName>
            </value>
            <value>
                <fullName>鳥取ヤード</fullName>
            </value>
            <value>
                <fullName>岡山ヤード</fullName>
            </value>
            <value>
                <fullName>広島ヤード</fullName>
            </value>
            <value>
                <fullName>山口ヤード</fullName>
            </value>
            <value>
                <fullName>四国ヤード</fullName>
            </value>
            <value>
                <fullName>福岡ヤード</fullName>
            </value>
            <value>
                <fullName>沖縄ヤード</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>