force-app/main/default/objects/SalesManagement__c/fields/Next_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Contact_Date__c</fullName>
    <label>次回連絡日</label>
    <type>Date</type>
</CustomField>