force-app/main/default/objects/SalesManagement__c/fields/No_Desired_Date__c.field-meta.xml
<CustomField>
    <fullName>No_Desired_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>希望日なし</label>
    <type>Checkbox</type>
</CustomField>