force-app/main/default/objects/SalesManagement__c/fields/NonBaikei__c.field-meta.xml
<CustomField>
    <fullName>NonBaikei__c</fullName>
    <description>久住課長から確認タブに表示要望あり作成。山本</description>
    <formula>Account__r.NonBaikei__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売契不要企業</label>
    <type>Checkbox</type>
</CustomField>