force-app/main/default/objects/SalesManagement__c/fields/NumberRemoved__c.field-meta.xml
<CustomField>
    <fullName>NumberRemoved__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.NumberRemoved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ナンバー外し</label>
    <type>Checkbox</type>
</CustomField>