force-app/main/default/objects/SalesManagement__c/fields/obic_contract_check_date__c.field-meta.xml
<CustomField>
    <fullName>obic_contract_check_date__c</fullName>
    <description>買取商談のOBIC売買契約書チェック連携日が表示される。山本</description>
    <formula>PurchaseOpportunity__r.obic_contract_check_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OBIC売買契約書チェック連携日</label>
    <type>Date</type>
</CustomField>