force-app/main/default/objects/SalesManagement__c/fields/OBIC_ordernum__c.field-meta.xml
<CustomField>
    <fullName>OBIC_ordernum__c</fullName>
    <label>OBIC受注番号</label>
    <length>50</length>
    <type>Text</type>
</CustomField>