force-app/main/default/objects/SalesManagement__c/fields/Order_confirmed__c.field-meta.xml
<CustomField>
    <fullName>Order_confirmed__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.PickupRequest_toLogistics__r.Order_confirmed__c</formula>
    <label>オーダー確定</label>
    <type>Checkbox</type>
</CustomField>