force-app/main/default/objects/SalesManagement__c/fields/OrderToSalesSupport__c.field-meta.xml
<CustomField>
    <fullName>OrderToSalesSupport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>売契情報</description>
    <label>営業サポートへ依頼</label>
    <type>Checkbox</type>
</CustomField>